記事の内容を修正し、名札の表示方法やディレクトリ構成を明確化

--- a/記事.md
+++ b/記事.md
@@ -1,6 +1,6 @@
 # Typstで紙の名札(PDF)を量産する
 
-##　はじめに
+## はじめに
 
 この記事ではTypstを用いて、あらかじめ参加者の名前や所属、役割等がわかっている前提で、イベント用の名札をPDF形式で大量に作成する方法について説明します。Typst自体の解説については割愛しますので、既存の日本語記事や[公式ドキュメント](https://typst.app/docs/)、[非公式日本語版ドキュメント](https://typst-jp.github.io/docs/)等を参照してください。
 
@@ -8,20 +8,45 @@
 
 今回想定している「名札」というのは、勉強会やカンファレンス、LT会などで使用される、縦型のA6サイズ(105mm x 148mm)の紙の名札を指します。ただ、この用紙サイズに関しても自由に変更していただいて問題なさそうです(名刺サイズであったり)。Typstの機能を使えばいろいろと凝ったものは作れそうですが、ここでは簡単のために以下のような要素を含んだ名札を作成します。
 
+
+
 - 参加者の氏名（フルネーム）
-  - 名札の中でもっとも大きく表示する
 - 所属・会社名・組織名
   - 氏名の下に中くらいの文字サイズで表示する
 - 役割・カテゴリ
   - `Attendee` / `Speaker` / `Staff` など
   - 色付きのラベル等で区別できるようにする
 - イベント名・ロゴ
-  - 上部または下部に小さめに配置する
+  - 下部に小さめに配置する
+
+作り方としては、以下の2パターンを紹介します。
+- パターンA: **1つのPDFファイル**に全員分の名札をまとめて出力する
+- パターンB: 参加者ごとに**PDFファイルを分割**して出力する
+
+おそらく主に使われるのはパターンAだと思いますが、Typstのありがたみがより感じられるのはパターンBかもしれません。ただし、後述しますがパターンBではTypstの標準機能ではなくPythonなどでCSVファイルを読み込み、データを流し込む必要があるので少し手間がかかります。
 
 ## 環境
+
 今回この記事を書くにあたって利用した環境を示しておきます。正直これ以外の環境でも問題なく動作すると思います。
 
 - OS: Windows 11
 - Typst: 0.14.0
 
+## ディレクトリ構成
+
+今回の記事では最終的に以下のようなディレクトリ/ファイル構成にすることを想定しています。
+
+```text
+badges
+├── badge_template.typ   # 共通テンプレート（パターンA・B共通）
+├── participants.csv     # 参加者情報（パターンA・B共通）
+├── all_badges.typ       # パターンA用Typstファイル
+├── single_badge.typ     # パターンB用Typstファイル
+├── generate_badges.py   # パターンB用Pythonスクリプト
+├── assets               # 画像等のアセットを格納するディレクトリ
+│   └── logo.png         # イベントロゴ画像
+└── output               # 出力先ディレクトリ
+    ├── all_badges.pdf   # パターンAの出力先
+    └── single_badges    # パターンBの出力先
+```
 
