ディレクトリ構成のコメントを整理し、ファイルの説明を明確化

--- a/記事.md
+++ b/記事.md
@@ -38,15 +38,14 @@
 
 ```text
 badges
-├── badge_template.typ   # 共通テンプレート（パターンA・B共通）
-├── participants.csv     # 参加者情報（パターンA・B共通）
-├── all_badges.typ       # パターンA用Typstファイル
-├── single_badge.typ     # パターンB用Typstファイル
-├── generate_badges.py   # パターンB用Pythonスクリプト
-├── assets               # 画像等のアセットを格納するディレクトリ
-│   └── logo.png         # イベントロゴ画像
-└── output               # 出力先ディレクトリ
-    ├── all_badges.pdf   # パターンAの出力先
-    └── single_badges    # パターンBの出力先
+├── badge_template.typ    # 共通テンプレート（パターンA・B共通）
+├── all_badges.typ        # パターンA用Typstファイル
+├── single_badge.typ      # パターンB用Typstファイル
+├── participants.csv      # 参加者情報（パターンA・B共通）
+├── generate_badges.py    # パターンB用Pythonスクリプト
+├── assets                # 画像等のアセット
+│   └── logo.png          # イベントロゴ画像
+└── output                # 出力先
+    ├── all_badges.pdf    # パターンAの出力先
+    └── single_badges     # パターンBの出力先
 ```
-
