--- a/記事.md
+++ b/記事.md
@@ -49,3 +49,36 @@ badges
     ├── all_badges.pdf    # パターンAの出力先
     └── single_badges     # パターンBの出力先
 ```
+
+各ディレクトリ/ファイルの役割は以下の通りです。
+
+- badge_template.typ
+名札1枚分（A6縦）のレイアウトとロジックを定義するTypstファイルです。氏名・所属・役割ラベル・イベント名・ロゴの配置やスタイルをまとめておき、パターンA/Bのどちらからも共通で読み込みます。
+
+- all_badges.typ
+participants.csvから全参加者分のデータをcsv()で読み込み、1人につき1ページの名札を生成して、複数ページからなる1つのPDF(output/all_badges.pdf)を出力するエントリポイントです（パターンA）。
+
+- single_badge.typ
+1人分の参加者情報だけを入力として受け取り、その人の名札1枚だけをPDFとして出力するエントリポイントです（パターンB）。Typstのsys.inputs機能などを使ってCLIから値を受け取り、その値をbadge_template.typ内のレイアウト関数に渡します。
+
+- participants.csv
+参加者一覧を保持するCSVファイルです。
+
+- generate_badges.py
+パターンB用のPythonスクリプトです。participants.csvを読み込み、各行の参加者情報をsingle_badge.typに渡してTypstを実行し、output/single_badges/配下に参加者ごとのPDFファイルを生成します。
+
+- assets/logo.png
+名札に表示するイベントロゴ画像です。badge_template.typからimage("assets/logo.png",...)のように読み込みます。
+
+- output/
+生成されたPDFファイルの出力先ディレクトリです。パターンAの出力であるall_badges.pdfと、パターンBで生成するsingle_badges/配下のPDFをまとめます。
+
+## 共通テンプレートの作成
+まずは名札1枚分のレイアウトとロジックを定義する共通テンプレート`badge_template.typ`を作成していきます。後で関数として外部から呼び出すことを考えていますが、まずは一人分の名札を実際に出力できるようなコードを書き、あとから関数化していきます。
+
+コードの記述にはVSCodeを、プレビューにはVSCodeの拡張機能として提供されている[Tinymist](https://github.com/Myriad-Dreamin/tinymist)を利用しています。
+
+
+
+
+
