--- a/記事.md
+++ b/記事.md
@@ -37,44 +37,44 @@
 今回の記事では最終的に以下のようなディレクトリ/ファイル構成にすることを想定しています。
 
 ```text
-badges
-├── badge_template.typ    # 共通テンプレート（パターンA・B共通）
-├── all_badges.typ        # パターンA用Typstファイル
-├── single_badge.typ      # パターンB用Typstファイル
+nametags
+├── nametag_template.typ    # 共通テンプレート（パターンA・B共通）
+├── all_nametags.typ        # パターンA用Typstファイル
+├── single_nametag.typ      # パターンB用Typstファイル
 ├── participants.csv      # 参加者情報（パターンA・B共通）
-├── generate_badges.py    # パターンB用Pythonスクリプト
+├── generate_nametags.py    # パターンB用Pythonスクリプト
 ├── assets                # 画像等のアセット
 │   └── logo.png          # イベントロゴ画像
 └── output                # 出力先
-    ├── all_badges.pdf    # パターンAの出力先
-    └── single_badges     # パターンBの出力先
+    ├── all_nametags.pdf    # パターンAの出力先
+    └── single_nametags     # パターンBの出力先
 ```
 
 各ディレクトリ/ファイルの役割は以下の通りです。
 
-- badge_template.typ
+- nametag_template.typ
 名札1枚分（A6縦）のレイアウトとロジックを定義するTypstファイルです。氏名・所属・役割ラベル・イベント名・ロゴの配置やスタイルをまとめておき、パターンA/Bのどちらからも共通で読み込みます。
 
-- all_badges.typ
-participants.csvから全参加者分のデータをcsv()で読み込み、1人につき1ページの名札を生成して、複数ページからなる1つのPDF(output/all_badges.pdf)を出力するエントリポイントです（パターンA）。
+- all_nametags.typ
+participants.csvから全参加者分のデータをcsv()で読み込み、1人につき1ページの名札を生成して、複数ページからなる1つのPDF(output/all_nametags.pdf)を出力するエントリポイントです（パターンA）。
 
-- single_badge.typ
-1人分の参加者情報だけを入力として受け取り、その人の名札1枚だけをPDFとして出力するエントリポイントです（パターンB）。Typstのsys.inputs機能などを使ってCLIから値を受け取り、その値をbadge_template.typ内のレイアウト関数に渡します。
+- single_nametag.typ
+1人分の参加者情報だけを入力として受け取り、その人の名札1枚だけをPDFとして出力するエントリポイントです（パターンB）。Typstのsys.inputs機能などを使ってCLIから値を受け取り、その値をnametag_template.typ内のレイアウト関数に渡します。
 
 - participants.csv
 参加者一覧を保持するCSVファイルです。
 
-- generate_badges.py
-パターンB用のPythonスクリプトです。participants.csvを読み込み、各行の参加者情報をsingle_badge.typに渡してTypstを実行し、output/single_badges/配下に参加者ごとのPDFファイルを生成します。
+- generate_nametags.py
+パターンB用のPythonスクリプトです。participants.csvを読み込み、各行の参加者情報をsingle_nametag.typに渡してTypstを実行し、output/single_nametags/配下に参加者ごとのPDFファイルを生成します。
 
 - assets/logo.png
-名札に表示するイベントロゴ画像です。badge_template.typからimage("assets/logo.png",...)のように読み込みます。
+名札に表示するイベントロゴ画像です。nametag_template.typからimage("assets/logo.png",...)のように読み込みます。
 
 - output/
-生成されたPDFファイルの出力先ディレクトリです。パターンAの出力であるall_badges.pdfと、パターンBで生成するsingle_badges/配下のPDFをまとめます。
+生成されたPDFファイルの出力先ディレクトリです。パターンAの出力であるall_nametags.pdfと、パターンBで生成するsingle_nametags/配下のPDFをまとめます。
 
 ## 共通テンプレートの作成
-まずは名札1枚分のレイアウトとロジックを定義する共通テンプレート`badge_template.typ`を作成していきます。
+まずは名札1枚分のレイアウトとロジックを定義する共通テンプレート`nametag_template.typ`を作成していきます。
 
 コードの記述にはVSCodeを、プレビューにはVSCodeの拡張機能として提供されている[Tinymist](https://github.com/Myriad-Dreamin/tinymist)を利用しています。
 
