名札作成手順を簡略化し、PDF出力の流れを明確化

--- a/記事.md
+++ b/記事.md
@@ -19,11 +19,7 @@
 - イベント名・ロゴ
   - 下部に小さめに配置する
 
-作り方としては、以下の2パターンを紹介します。
-- パターンA: **1つのPDFファイル**に全員分の名札をまとめて出力する
-- パターンB: 参加者ごとに**PDFファイルを分割**して出力する
-
-おそらく主に使われるのはパターンAだと思いますが、ファイルごとに管理したい場合もあるかもしれません。ただし、後述しますがパターンBではTypstの標準機能ではなくPythonなどでCSVファイルを読み込み、データを流し込む必要があるので少し手間がかかります。
+今回は1つのPDFファイルに全員分の名札をまとめて出力したのち、必要があれば参加者ごとにPDFファイルを分割する、という流れを採用します。
 
 ## 環境
 
@@ -32,48 +28,53 @@
 - OS: Windows 11
 - Typst: 0.14.0
 
+### 使用フォントについて
+
+今回のテンプレートでは、以下のフォントを使用しています。
+
+- **Roboto**: 英数字用
+- **IBM Plex Sans JP**: 日本語用
+- **Roboto Mono**: SNSアカウント名用
+
+これらのフォントは[Google Fonts](https://fonts.google.com/)から無料でダウンロード可能です。
+
 ## ディレクトリ構成
 
 今回の記事では最終的に以下のようなディレクトリ/ファイル構成にすることを想定しています。
 
 ```text
 nametags
-├── nametag_template.typ    # 共通テンプレート（パターンA・B共通）
-├── all_nametags.typ        # パターンA用Typstファイル
-├── single_nametag.typ      # パターンB用Typstファイル
-├── participants.csv      # 参加者情報（パターンA・B共通）
-├── generate_nametags.py    # パターンB用Pythonスクリプト
+├── nametag_template.typ    # テンプレート
+├── all_nametags.typ        # 単一PDF出力用
+├── participants.csv      # 参加者情報
 ├── assets                # 画像等のアセット
 │   └── logo.png          # イベントロゴ画像
 └── output                # 出力先
-    ├── all_nametags.pdf    # パターンAの出力先
-    └── single_nametags     # パターンBの出力先
+    ├── all_nametags.pdf    # 単一PDFファイル
+    └── single_nametags     # 上記のPDFを分割したもの
 ```
 
 各ディレクトリ/ファイルの役割は以下の通りです。
 
 - nametag_template.typ
-名札1枚分（A6縦）のレイアウトとロジックを定義するTypstファイルです。氏名・所属・役割ラベル・イベント名・ロゴの配置やスタイルをまとめておき、パターンA/Bのどちらからも共通で読み込みます。
+名札1枚分（A6縦）のレイアウトとロジックを定義するTypstファイルです。氏名・所属・役割ラベル・イベント名・ロゴの配置やスタイルをまとめておき、`all_nametags.typ`からインポートして利用します。
 
 - all_nametags.typ
-participants.csvから全参加者分のデータをcsv()で読み込み、1人につき1ページの名札を生成して、複数ページからなる1つのPDF(output/all_nametags.pdf)を出力するエントリポイントです（パターンA）。
-
-- single_nametag.typ
-1人分の参加者情報だけを入力として受け取り、その人の名札1枚だけをPDFとして出力するエントリポイントです（パターンB）。Typstのsys.inputs機能などを使ってCLIから値を受け取り、その値をnametag_template.typ内のレイアウト関数に渡します。
+participants.csvから全参加者分のデータをcsv()で読み込み、1人につき1ページの名札を生成して、複数ページからなる1つのPDF(output/all_nametags.pdf)を出力するためのTypstファイルです。
 
 - participants.csv
 参加者一覧を保持するCSVファイルです。
 
-- generate_nametags.py
-パターンB用のPythonスクリプトです。participants.csvを読み込み、各行の参加者情報をsingle_nametag.typに渡してTypstを実行し、output/single_nametags/配下に参加者ごとのPDFファイルを生成します。
+- split_pdf.py
+参加者ごとにPDFファイルを分割して出力するPythonスクリプトです。
 
 - assets/logo.png
 名札に表示するイベントロゴ画像です。nametag_template.typからimage("assets/logo.png",...)のように読み込みます。
 
 - output/
-生成されたPDFファイルの出力先ディレクトリです。パターンAの出力であるall_nametags.pdfと、パターンBで生成するsingle_nametags/配下のPDFをまとめます。
+生成されたPDFファイルの出力先ディレクトリです。all_nametags.pdfと、`split_pdf.py`で生成される参加者ごとのPDFファイル(single_nametags/)を格納します。
 
-## 共通テンプレートの作成
+## テンプレートの作成
 まずは名札1枚分のレイアウトとロジックを定義する共通テンプレート`nametag_template.typ`を作成します。
 
 コードの記述にはVSCodeを、プレビューにはVSCodeの拡張機能として提供されている[Tinymist](https://github.com/Myriad-Dreamin/tinymist)を利用しています。
@@ -386,9 +387,9 @@ if __name__ == "__main__":
 
 これを用いて1000人分の名札を生成してみます。
 
-## パターンA: 1つのPDFファイルに全員分の名札をまとめて出力する
-まずはパターンAとして、1つのPDFファイルに全員分の名札をまとめて出力する方法について説明します。この場合、Typstの標準機能のみで完結します。
-先ほど作成した共通テンプレート`nametag_template.typ`を読み込み、CSVファイルから参加者情報を取得して、1人分ずつ名札を生成するTypstファイル`all_nametags.typ`を作成します。以下にその全文を示します。
+## 1つのPDFファイルに全員分の名札をまとめて出力する
+まずは、1つのPDFファイルに全員分の名札をまとめて出力する方法について説明します。この場合、Typstの標準機能のみで完結します。
+先ほど作成したテンプレート`nametag_template.typ`を読み込み、CSVファイルから参加者情報を取得して、1人分ずつ名札を生成するTypstファイル`all_nametags.typ`を作成します。以下にその全文を示します。
 
 ```typ
 // all_nametags.typ
@@ -501,27 +502,4 @@ TotalMilliseconds : 755.877
 
 すなわち、1000人分の名札を生成するのに約756ミリ秒(0.756秒)しかかかっていません。これならば、参加者数が数千人程度であっても十分に実用的に利用できそうです。
 
-## パターンB: 参加者ごとにPDFファイルを分割して出力する
-次にパターンBとして、参加者ごとにPDFファイルを分割して出力する方法について説明します。この場合、Typstの標準機能だけでは完結しないため、Pythonスクリプトを用いてCSVファイルを読み込み、各参加者ごとにTypstを実行してPDFファイルを生成します。まずは参加者1人分の名札を生成するTypstファイル`single_nametag.typ`を作成します。こちらは全員分のものを1つのファイルとして作成するものに比べれば非常にシンプルです。
-
-```typ
-// single_nametag.typ
-#import "nametag_template.typ": create-nametag
-
-// コマンドライン引数(--input)から値を辞書として取得
-#let inputs = sys.inputs
-
-// 受け取ったデータを使って名札を生成
-#create-nametag(
-  name: inputs.at("name", default: ""),
-  affiliation: inputs.at("affiliation", default: ""),
-  role: inputs.at("role", default: "Attendee"),
-  sns: inputs.at("sns", default: ""),
-  interests: inputs.at("interests", default: ""),
-)
-```
-
-特筆すべき点としては、`sys.inputs`を使ってコマンドライン引数から値を辞書として受け取っている点です。これにより、Pythonスクリプトから各参加者の情報を引数として渡すことができます。
-
-それでは、Pythonスクリプト`generate_nametags.py`を作成します。このスクリプトは`participants.csv`を読み込み、各参加者ごとに`single_nametag.typ`を実行してPDFファイルを生成します。以下にその全文を示します。
-
+## 参加者ごとにPDFファイルを分割して出力する
