--- a/記事.md
+++ b/記事.md
@@ -19,7 +19,7 @@
 - イベント名・ロゴ
   - 下部に小さめに配置する
 
-今回は1つのPDFファイルに全員分の名札をまとめて出力したのち、必要があれば参加者ごとにPDFファイルを分割する、という流れを採用します。
+今回は1つのPDFファイルに全員分の名札をまとめて出力したのち、必要があればPythonスクリプトを用いて参加者ごとにPDFファイルを分割する、という流れを採用します。
 
 ## 環境
 
@@ -27,6 +27,8 @@
 
 - OS: Windows 11
 - Typst: 0.14.0
+- Python: 3.14.0
+
 
 ### 使用フォントについて
 
@@ -503,3 +505,109 @@ TotalMilliseconds : 755.877
 すなわち、1000人分の名札を生成するのに約756ミリ秒(0.756秒)しかかかっていません。これならば、参加者数が数千人程度であっても十分に実用的に利用できそうです。
 
 ## 参加者ごとにPDFファイルを分割して出力する
+最後に、1つのPDFファイルにまとめた名札を参加者ごとに分割して出力する方法について説明します。これにはPythonの`pypdf`ライブラリを使用するため、以下のようにインストールして下さい。
+
+```
+pip install pypdf
+```
+
+次に、以下のPythonスクリプト`split_pdf.py`を作成します。
+
+```python
+# split_pdf.py
+import csv
+import os
+from pathlib import Path
+from pypdf import PdfReader, PdfWriter
+
+# パス設定
+CSV_FILE = "participants.csv"
+INPUT_PDF = "output/all_nametags.pdf"
+OUTPUT_DIR = "output/single_nametags"
+
+def main():
+    # 出力先ディレクトリが存在しない場合は作成
+    os.makedirs(OUTPUT_DIR, exist_ok=True)
+
+    # CSVから参加者名リストを取得
+    participants = []
+    try:
+        with open(CSV_FILE, encoding='utf-8') as f:
+            reader = csv.DictReader(f)
+            for row in reader:
+                # CSVのヘッダー名 "Name" に合わせて取得
+                participants.append(row["Name"])
+    except FileNotFoundError:
+        print(f"Error: {CSV_FILE} not found.")
+        return
+
+    # PDFファイルを読み込む
+    try:
+        reader = PdfReader(INPUT_PDF)
+    except FileNotFoundError:
+        print(f"Error: {INPUT_PDF} not found. Run typst compile first.")
+        return
+
+    # ページ数と参加者数の整合性チェック
+    if len(reader.pages) != len(participants):
+        print(f"Error: Page count ({len(reader.pages)}) does not match participant count ({len(participants)}).")
+        return
+
+    print(f"Splitting {len(participants)} pages...")
+
+    # ページごとに分割して保存
+    for i, name in enumerate(participants):
+        writer = PdfWriter()
+        # i番目のページを取得して追加
+        writer.add_page(reader.pages[i])
+
+        # ファイル名に使えない文字を置換（簡易的なサニタイズ）
+        safe_name = name.replace("/", "_").replace("\\", "_").replace(" ", "_")
+        
+        # 連番 + 名前でファイル名を決定 (例: 001_山田_太郎.pdf)
+        output_filename = os.path.join(OUTPUT_DIR, f"{i+1:03d}_{safe_name}.pdf")
+
+        with open(output_filename, "wb") as f:
+            writer.write(f)
+
+    print(f"Done! Saved to {OUTPUT_DIR}/")
+
+if __name__ == "__main__":
+    main()
+```
+このスクリプトは、`output/all_nametags.pdf`を読み込み、`participants.csv`から参加者名を取得して、各ページを参加者ごとに分割して`output/single_nametags/`ディレクトリに保存します。ファイル名は連番と参加者名を組み合わせた形式にしています。今回の場合、例えば`001_佐藤_太郎.pdf`のようになります。
+
+こちらも出力にかかる時間を計測しつつ実行してみましょう。
+
+```powershell
+Measure-Command { python split_pdf.py }
+```
+
+すると、以下のような結果が得られました。
+
+```plaintext
+
+Days              : 0
+Hours             : 0
+Minutes           : 0
+Seconds           : 3
+Milliseconds      : 600
+Ticks             : 36008636
+TotalDays         : 4.1676662037037E-05
+TotalHours        : 0.00100023988888889
+TotalMinutes      : 0.0600143933333333
+TotalSeconds      : 3.6008636
+TotalMilliseconds : 3600.8636
+```
+すなわち、1000人分の名札を参加者ごとに分割して保存するのに約3.6秒かかりました。Typstでのコンパイル時間と比べるとやや時間がかかっていますが、これも十分に実用的な範囲内だと思います。
+
+念のため、適当に選んだファイルの名前とPDFの中身が一致しているか確認してみます。
+
+![分割後のPDFファイルのプレビュー画像](./images/split_pdf_preview.png)
+
+一致していることが確認できました。
+
+## おわりに
+以上、Typstを用いて紙の名札(PDF)を量産する方法について説明しました。Typstの外部データ読み込み機能を活用することで、CSVファイルから参加者情報を簡単に取り込み、効率的に名札を生成できることがわかりました。今回はテキストデータしか扱いませんでしたが、適切にパスを記述すれば画像の読み込みなども非常に簡単にできるため、例えばQRコードを名札に含めたい場合などにも応用できると思います。
+
+Typst自体の機能も非常に強力で柔軟性が高いため、今回紹介したテンプレートをベースにして、より凝ったデザインや追加情報を含む名札を作成することも可能です。ぜひ皆さんも自分のイベントに合わせた名札を作成してみてください。
