split_pdf.pyの説明をディレクトリ構成に追加

--- a/記事.md
+++ b/記事.md
@@ -47,6 +47,7 @@ nametags
 ├── nametag_template.typ    # テンプレート
 ├── all_nametags.typ        # 単一PDF出力用
 ├── participants.csv      # 参加者情報
+├── split_pdf.py          # PDF分割用スクリプト
 ├── assets                # 画像等のアセット
 │   └── logo.png          # イベントロゴ画像
 └── output                # 出力先
